syntax = "proto3";

package volume.v1alpha1;
option go_package = "github.com/onmetal/onmetal-api/ori/apis/volume/v1alpha1";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/onmetal/onmetal-api/ori/apis/meta/v1alpha1/api.proto";

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.goproto_getters_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;

service VolumeRuntime {
  rpc ListVolumes(ListVolumesRequest) returns (ListVolumesResponse) {};
  rpc CreateVolume(CreateVolumeRequest) returns (CreateVolumeResponse) {};
  rpc DeleteVolume(DeleteVolumeRequest) returns (DeleteVolumeResponse) {};

  rpc ListVolumeClasses(ListVolumeClassesRequest) returns (ListVolumeClassesResponse) {};
}

message VolumeFilter {
  string id = 1;
  map<string, string> label_selector = 2;
}

message VolumeResources {
  uint64 storage_bytes = 1;
}

message VolumeSpec {
  string image = 1;
  string class = 2;
  VolumeResources resources = 3;
}

message VolumeStatus {
  VolumeState state = 1;
  VolumeAccess access = 2;
}

message Volume {
  meta.v1alpha1.ObjectMetadata metadata = 1;
  VolumeSpec spec = 2;
  VolumeStatus status = 3;
}

message VolumeClassCapabilities {
  int64 tps = 1;
  int64 iops = 2;
}

message VolumeClass {
  string name = 1;
  VolumeClassCapabilities capabilities = 2;
}

message VolumeAccess {
  string driver = 1;
  string handle = 2;
  map<string, string> attributes = 3;
  map<string, bytes> secret_data = 4;
}

enum VolumeState {
  VOLUME_PENDING = 0;
  VOLUME_AVAILABLE = 1;
  VOLUME_ERROR = 2;
}

message ListVolumesRequest {
  VolumeFilter filter = 1;
}

message ListVolumesResponse {
  repeated Volume volumes = 1;
}

message CreateVolumeRequest {
  Volume volume = 1;
}

message CreateVolumeResponse {
  Volume volume = 1;
}

message DeleteVolumeRequest {
  string volume_id = 1;
}

message DeleteVolumeResponse {
}

message ListVolumeClassesRequest {
}

message ListVolumeClassesResponse {
  repeated VolumeClass volume_classes = 1;
}
